--- a/POC v2/Readme
+++ b/POC v2/Readme
@@ -1,6 +1,6 @@
 The Project creates a dataflow pipeline that mirrors international call records that are aggregated and streamed to BQ at any volume. From 0-hundred of thousands of call records per sec. 
 
-Using Pub/Sub, Data flow templates, Data Catalog Schemas (For real time aggregate of messages), and BigQuery Streaming we can achieve a very high throughput into the database which can respond to future 
+Using Pub/Sub, Data flow templates, Data Catalog Schemas (For real time aggregate of messages), and BigQuery Streaming we can achieve a very high throughput into the database which can respond to future queries in under 10 seconds. 
 
 This is a demo project to provide and example architecture for streaming call records in a common Lambda pattern.  
 
